# evertims

./: .gitignore  CMakeLists.txt  LICENCE.md  LICENSE  Makefile  README.md  elBSP.cc  elBeam.cc  elDefs.h  elListener.h  elOrientedPoint.cc  elPathSolution.cc  elPathSolution.h  elPolygon.cc  elPolygon.h  elRay.cc  elRoom.cc  elRoom.h  elVector.h  main.cc  material.cc  material.h  reader.cc  reader.h  reverbEstimate.cc  reverbEstimate.h  socket.h  solver.cc  solver.h  start.sh  writer.cc  writer.h
doc/: EVERTims.doc  EVERTims.docx  LICENCE.md
evertims/: CMakeLists.txt
evertims/src/: main.cc  reader.cc  reader.h  reverbEstimate.cc  reverbEstimate.h  socket.cc  socket.h  solver.cc  solver.h  utils.h  writer.cc  writer.h
lib/libevert/src/: elAABB.h  elPathSolution.h  elRoom.h
libevert/: .gitignore  CMakeLists.txt
libevert/src/: elAABB.h  elBSP.cc  elBSP.h  elBeam.cc  elBeam.h  elDefs.h  elListener.cc  elListener.h  elOrientedPoint.cc  elOrientedPoint.h  elPathSolution.cc  elPathSolution.h  elPolygon.cc  elPolygon.h  elRay.cc  elRay.h  elRoom.cc  elRoom.h  elSource.cc  elSource.h  elVector.cc  elVector.h  material.cc  material.h
resources/: startEvertims.sh
src/: elAABB.h  elBSP.cc  elBSP.h  elBeam.cc  elBeam.h  elDefs.h  elListener.cc  elListener.h  elOrientedPoint.cc  elOrientedPoint.h  elPathSolution.cc  elPathSolution.h  elPolygon.cc  elPolygon.h  elRay.h  elRoom.cc  elRoom.h  elSource.cc  elSource.h  elVector.cc  elVector.h  main.cc  material.cc  material.h  reader.cc  reader.h  reverbEstimate.cc  reverbEstimate.h  socket.cc  socket.h  solver.cc  solver.h  utils.h  writer.cc  writer.h
src/OSC/: OSC-client.h
